# Caminho: /mnt/c/Users/Gabriel/solana_projects/ausd-confidential-program/programs/ausd-confidential-program/Cargo.toml
# Este é o Cargo.toml do seu PROGRAMA Anchor principal.
# Ele define as configurações e dependências específicas do seu programa, incluindo as crates internas do aUSD.

[package]
name = "ausd-confidential-program"
version = "0.1.0"
description = "Programa Solana para a stablecoin aUSD com confidencialidade."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ausd_confidential_program"

[features]
no-entrypoint = []
default = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"] # Necessário para gerar o IDL do Anchor.

[dependencies]
# Dependências do Anchor Framework - Alinhadas para compatibilidade com solana-program 1.18.26 (da Arcium).
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token"] }
solana-program = "=1.18.26" # Versão exata do solana-program usada pela Arcium.

# Dependências Arkworks para ZK-SNARKs - Versões alinhadas com as da Arcium (0.4.0).
ark-bn254 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
ark-std = { version = "0.4.0", default-features = false }

# Borsh - Versão alinhada com a Arcium.
borsh = "0.10.3"

# Outras dependências comuns (verificar se a Arcium usa e adicionar se necessário).
clap = { version = "4.4.18", default-features = false, features = ["derive"] }
rand_core = { version = "0.6.4", default-features = false }
rand = { version = "0.8.5", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.111", default-features = false }

# ===============================================================
# CRATES INTERNAS DO PROJETO AUSD - REPLICANDO A ARQUITETURA ARCIUM
# Note os caminhos relativos (`../../shared/...`) para referenciar essas crates.
# ===============================================================
ausd-types = { path = "../../shared/ausd-types", default-features = false, features = ["accounts", "bytes", "tokens"] }
ausd-derive = { path = "../../shared/ausd-derive" }
ausd-proc-macros = { path = "../../shared/ausd-proc-macros" }
ausd-proc-macro-utils = { path = "../../shared/ausd-proc-macro-utils" }
ausd-computation = { path = "../../shared/ausd-computation" }
ausd-utils = { path = "../../shared/ausd-utils" }
