# Caminho: shared/ausd-derive/Cargo.toml
# Crate de macros derive para o projeto aUSD.

[package]
name = "ausd-derive"
version = "0.1.0"
edition = "2021"
publish = false

[features]
mainnet = ["ausd-proc-macro-utils/mainnet"]
devnet = ["ausd-proc-macro-utils/devnet"]

[dependencies]
# Dependências conforme o monorepo Arcium, adaptadas para aUSD
ausd-proc-macro-utils = { path = "../ausd-proc-macro-utils" } # Dependência local
proc-macro2 = "1.0.36" # Versão Arcium
quote = "1.0.16"      # Versão Arcium
syn = { version = "1.0.89", features = ["full", "fold"] } # Versão Arcium
